--- a/src/main/resources/assets/steamage/lang/en_US.lang
+++ b/src/main/resources/assets/steamage/lang/en_US.lang
@@ -1,3 +1,3 @@
 item.BlockCopperPipe.name=Copper Pipe
 block.BlockSteam=Steam
-itemGroup.AwesomeSauwss SteamAge Addon=AwesomeSauwss SteamAge Addon
+itemGroup.SteamAge=SteamAge Addon
